# quant

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backtester/: pyproject.toml  requirements-ci.txt  run_backtest.py
backtester/api/: deps.py  main.py
backtester/api/routes/: backtest.py  pairs.py  paper_trading.py  stress.py  tickers.py  universe.py  walkforward.py
backtester/data/: benchmark.py  downloader.py  events.py  fetcher.py  handler.py  metadata.py  screener.py  universe.py  universe_fetcher.py
backtester/engine/: cost_calibrator.py  costs.py  lob_executor.py  report.py  slippage.py  stress.py  universe_engine.py  vectorized.py  walkforward.py
backtester/live/: __init__.py  broker.py  config.py  paper_runner.py
backtester/risk/: __init__.py  kelly.py  portfolio_risk.py  position_sizer.py  stop_loss.py
backtester/static/: index.html
backtester/static/assets/: index-C1NN3b0b.js  index-COQRvjSf.css  index-CgqYHo1E.css  index-CmB6hLFV.js  index-Dv81jqmb.js  index-eD-oxJ8W.css
backtester/stats/: metrics.py
backtester/strategy/: cross_sectional.py  pairs.py  pairs_scanner.py  regime.py  signals.py
backtester/tests/: test_engine.py  test_execution.py  test_lob_executor.py  test_pairs_scanner.py  test_paper_trading.py  test_regime.py  test_risk.py  test_universal.py  test_universe.py  test_upgrades.py
backtester/webapp/: index.html  package-lock.json  package.json  tailwind.config.js
backtester/webapp/src/: App.tsx  api.ts  index.css  types.ts
backtester/webapp/src/components/: BacktestTab.tsx  ComparisonTable.tsx  EquityCurveChart.tsx  EventDecompPanel.tsx  MetricsGrid.tsx  PairsScannerPanel.tsx  PairsTab.tsx  RiskDashboard.tsx  StressTab.tsx  UniverseTab.tsx  WalkForwardTab.tsx
lob_simulator/: __init__.py  pyproject.toml
lob_simulator/core/: __init__.py  book.py  level.py  order.py  types.py
lob_simulator/metrics/: execution.py  ofi.py
lob_simulator/tests/: test_book.py
scripts/: benchmark_latency.py
