[project]
name = "quant"
version = "0.1.0"
description = "Institutional-grade quantitative research toolkit"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "yfinance>=0.2.36",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "statsmodels>=0.14",
    "scipy>=1.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["backtester/tests", "lob_simulator/tests"]
asyncio_mode = "auto"
